Minor revisions on color

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ In particular, I am interested in the following areas:
 <font size="4.5">[<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h2></a>
 <!-- (<sup>*</sup>: equal contribution) -->
 <ul>
-  <li> <b>Answer Ranking for Product-Related Questions via Multiple Semantic Relations Modeling</b>
-    <br><b>Wenxuan Zhang</b>, Yang Deng, Wai Lam.
+  <li> <div id="text" style = "color:#1f57b8"><b>Answer Ranking for Product-Related Questions via Multiple Semantic Relations Modeling</b></div>
+    <b>Wenxuan Zhang</b>, Yang Deng, Wai Lam.
     <br><i>To appear in The 43rd International ACM SIGIR Conference on Research & Development in Information Retrieval</i>, 2020. (<b>SIGIR 2020</b>) </li>
     <!--
     <div id="bib1" style="display:none">
@@ -114,8 +114,8 @@ In particular, I am interested in the following areas:
   <div id="div1"></div><br>
   
 
-  <li> <b>Bridging Hierarchical and Sequential Context Modeling for Question-driven Extractive Answer Summarization</b>
-    <br>Yang Deng, <b>Wenxuan Zhang</b>, Yaliang Li, Min Yang, Wai Lam and Ying Shen.
+  <li> <div id="text" style = "color:#1f57b8"><b>Bridging Hierarchical and Sequential Context Modeling for Question-driven Extractive Answer Summarization</b></div>
+    Yang Deng, <b>Wenxuan Zhang</b>, Yaliang Li, Min Yang, Wai Lam and Ying Shen.
     <br><i>To appear in The 43rd International ACM SIGIR Conference on Research & Development in Information Retrieval</i>, 2020. (<b>SIGIR 2020</b>) </li>
     <!--
     <div id="bib1" style="display:none">
@@ -132,8 +132,8 @@ In particular, I am interested in the following areas:
   
 
 
-  <li> <b>Review-guided Helpful Answer Identification in E-commerce</b>
-    <br><b>Wenxuan Zhang</b>, Wai Lam, Yang Deng, Jing Ma.
+  <li> <div id="text" style = "color:#1f57b8"><b>Review-guided Helpful Answer Identification in E-commerce</b></div>
+    <b>Wenxuan Zhang</b>, Wai Lam, Yang Deng, Jing Ma.
     <br><i>To appear in the Proceedings of the World Wide Web Conference</i>, 2020. (<b>WWW 2020, oral</b>) </li>
   
     <div id="bib1" style="display:none">
@@ -151,8 +151,8 @@ In particular, I am interested in the following areas:
   <div id="div1"></div><br>
 
 
-  <li> <b>Exploiting BERT for End-to-End Aspect-Based Sentiment Analysis</b>
-    <br>Xin Li, Lidong Bing, <b>Wenxuan Zhang</b> and Wai Lam.
+  <li> <div id="text" style = "color:#1f57b8"><b>Exploiting BERT for End-to-End Aspect-Based Sentiment Analysis</b></div>
+    Xin Li, Lidong Bing, <b>Wenxuan Zhang</b> and Wai Lam.
     <br><i>In Proceedings of the 5th Workshop on Noisy User-generated Text</i>, 2019. <b>(W-NUT@EMNLP 2019)</b></li>
   
   <div id="bib0" style="display:none">
