--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div id="text" style = "color:#1f57b8">AnswerFact: Fact Checking in Product Question Answering</div>
         <strong>Wenxuan Zhang</strong>, Yang Deng, Jing Ma, Wai Lam.
         <br>To appear in <i>Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing</i>, 2020. (<b>EMNLP 2020</b>) 
-        [<a href="">paper</a>] [<a href="">data</a>] </li>
+        [<a href="https://www.aclweb.org/anthology/2020.emnlp-main.188/">paper</a>] [<a href="https://drive.google.com/file/d/1JAmbLlV0b8Fm03VnNeVEXmROvj1po2lN/view?usp=sharing">data</a>] </li>
       <p> </p>
 
       <li> 
