fix blog format

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 
 <h3 id="professional">Professional Activities</h3>
   <ul>
-    <li> Reviewer (or PC Member): AAAI 2021 </li>
-    <li> Secondary Reviewer: ACL 2020, WSDM 2020, CIKM 2019-2020, ICDM 2020, COLING 2020, AACL 2020, EMNLP 2019, WWW 2019.</li>
+    <li> Reviewer (or PC Member): AAAI 2021, Expert Systems with Applications (ESWA). </li>
+    <li> Secondary Reviewer: ACL 2020-2021, WWW 2019-2021, NAACL 2021, IJCAI 2021, WSDM 2020, CIKM 2019-2020, ICDM 2020, COLING 2020, AACL 2020, EMNLP 2019.</li>
   </ul>
 </div>
 
