--- a/index.html
+++ b/index.html
@@ -40,19 +40,20 @@
   <h3><a name="bio"></a>Short Bio</h3>
   Hi, I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai LAM</a>, where I conducted research on NLP and IR, especially focusing on problems in E-commerce domain.
+  
+  <br><br>I have broad interests in natural language processing and machine learning. In particular, I focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems). 
 
-  <br><br><span style="color:#B08519"><i>[NEW]</i></span> Research internship positions in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
+  <br><br><span style="color:#f8780f"><i>[NEW]</i></span> Research internship positions (focusing on pure research) in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
 
+  <!--
   <h3><a name="research-interests"></a>Research Interests</h3>
     I have broad interests in natural language processing and machine learning, especially applying deep learning for various NLP tasks. In particular, I focus on:
     <ul>
       <li>Conversational AI: Question Answering and Dialogue Systems </li>
       <li>Sentiment Analysis (especially fine-grained aspect-level sentiment analysis)</li>
     </ul>
-    I'm also interested in <span style="color:#B08519"><a href="https://isakzhang.notion.site/What-is-Transfer-Learning-666035af797a4949b032bbeb0ea46df6">Transfer Learning</a></span> (≈ PLM adaptation for various tasks nowadays). 
-    <!-- My research works involve many perspectives of TL: utilization of external supervision signals (WWW20, AACL20), adaptation of pre-trained language models (ACL21, EMNLP21), and cross-lingual transfer (EMNLP21) -->
+    I'm also interested in <span style="color:#B08519"><a href="https://isakzhang.notion.site/What-is-Transfer-Learning-666035af797a4949b032bbeb0ea46df6">Transfer Learning</a></span> (≈ PLM adaptation for various tasks nowadays).  My research works involve many perspectives of TL: utilization of external supervision signals (WWW20, AACL20), adaptation of pre-trained language models (ACL21, EMNLP21), and cross-lingual transfer (EMNLP21) 
   
-  <!--
   <h3 id="news">News</h3>
     <ul>
       <li><small> <span style="color:#B08519">[Oct 2020]</span> x </small></li>
@@ -64,8 +65,16 @@
       <li>
         <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> A Survey on Aspect-Based Sentiment Analysis: Tasks, Methods, and Challenges</div>
         <strong>Wenxuan Zhang</strong>, Xin Li, Yang Deng, Lidong Bing, Wai Lam
-        <br>arXiv:2203.01054 
-        [<a href="https://arxiv.org/abs/2203.01054">paper</a>]
+        <br>IEEE Transactions on Knowledge and Data Engineering, 2022 (<b>TKDE 2022</b>)
+        [<a href="https://arxiv.org/abs/2204.06923">paper</a>] [<a href="https://github.com/IsakZhang/ABSA-Survey">resources</a>] [<a href="https://isakzhang.notion.site/ABSA-c0f507c4704b40b0ad024c39c9ab2dc2">blog</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">A Unified Multi-task Learning Framework for Multi-goal Conversational Recommender Systems</div>
+        Yang Deng, <strong>Wenxuan Zhang</strong>, Weiwen Xu, Wenqiang Lei, Tat-Seng Chua, Wai Lam
+        <br>To appear in <i>ACM Transactions on Information Systems</i>, 2023 (<b>TOIS 2023</b>)
+        [<a href="https://arxiv.org/abs/2203.01054">paper</a>] [<a href="https://github.com/dengyang17/unimind">data&code</a>]
       </li>
       <p> </p>
 
@@ -201,7 +210,7 @@
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: Aug 2022
+  <p style="text-align:right;">Last modified date: Feb 2023
   </br>Website design modified from <a href="https://nlp.stanford.edu/~johnhew/">here</a></p>
 </div>
 
