--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> / <a href="https://isakzhang.notion.site/">Blog Posts</a> / <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
-  <br>Quick jumps: [<a href="#bio">Bio</a>] [<a href="#research-interests">Research</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching</a>]
+  <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   
   <hr /> 
   <h3><a name="bio"></a>Short Bio</h3>
   Hi, I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai LAM</a>, where I conducted research on NLP and IR, especially focusing on problems in E-commerce domain.
   
-  <br><br>I have broad interests in natural language processing and machine learning. In particular, I focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems). 
+  <br><br>I have broad interests in natural language processing and machine learning. I focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).
+  Recently, I'm quite interested in large language models, especially on how to make them more accessible in specific application scenarios.
 
   <br><br><span style="color:#f8780f"><i>[NEW]</i></span> Research internship positions (focusing on pure research) in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
 
@@ -178,16 +179,15 @@
       <!-- [<a href="https://arxiv.org/pdf/1910.00883.pdf">arxiv</a>] -->
     </ul>
 
-
 <h3><a name="awards"></a>Honors & Awards</h3>
   <ul>
     <li> ACM SIGIR Student Travel Grant for SIGIR 2020 </li>
     <li> National Scholarship in 2016-2017, Ministry of Education of China, 2017 </li>
     <li> National Scholarship in 2015-2016, Ministry of Education of China, 2016 </li>
     <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are rewarded every year</i>), 2017</li>
+    <!--
     <li> Third Prize in National College Student Information Security Contest, 2017</li>
     <li> Outstanding Graduate of Sichuan University, SCU, 2017</li>
-    <!--
     <li> Outstanding Student of Sichuan University, SCU, 2016 </li>
     <li> Excellent President of Academic Student Community of Sichuan University, SCU, 2016 </li>  
     -->
@@ -195,12 +195,22 @@
 
 <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Regular PC Member (or Reviewer) of: ACL, EMNLP, COLING, SIGKDD, WWW, WSDM, AAAI, NLPCC</li>
-    <li> Journal Reviewer: Neurocomputing, Computational Intelligence, Natural Language Engineering</li>
+    <li> Regular PC Member (or Reviewer) of: ACL, EMNLP, ACL Rolling Review, COLING, SIGKDD, WWW, WSDM, AAAI, NLPCC</li>
+    <li> Journal Reviewer
+      <ul>
+        <li> ACM Transactions on Information Systems (TOIS)
+        <li> ACM Transactions on the Web (TWEB)
+        <li> Neurocomputing
+        <li> Computational Intelligence
+        <li> Transactions on Audio, Speech and Language Processing (TASLP)
+        </ul>
+    </li>
   </ul>
 
-<h3><a name="teaching"></a>Teaching</h3>
+<h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li> Mar 2023, I gave a talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
+      on Sentiment Analysis (S3A)</a></li>
     <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications</li>
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
     <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
