--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134238626-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134238626-1');
+  </script>
+
 </head>
 
 <body>
@@ -195,13 +206,16 @@
 
 <h3><a name="professional"></a>Professional Service</h3>
   <ul>
-    <li> Regular PC Member (or Reviewer) of: ACL, EMNLP, ACL Rolling Review, COLING, SIGKDD, WWW, WSDM, AAAI, NLPCC</li>
-    <li> Journal Reviewer
+    <li> Regular PC Member (or Reviewer): 
+      <ul>
+        <li>ACL, EMNLP, ACL Rolling Review, COLING</li>
+        <li>SIGKDD, WWW, WSDM, AAAI</li>
+      </ul>
+    <li> Journal Reviewer:
       <ul>
         <li> ACM Transactions on Information Systems (TOIS)
         <li> ACM Transactions on the Web (TWEB)
         <li> Neurocomputing
-        <li> Computational Intelligence
         <li> Transactions on Audio, Speech and Language Processing (TASLP)
         </ul>
     </li>
