--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2022.jpeg" alt="wxzhang-photo">
+  <img class="avatar" src="img/wxzhang-2023-square2.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   <br>Senior Algorithm Engineer (算法专家)
@@ -47,6 +47,7 @@
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> / <a href="https://isakzhang.notion.site/">Blog Posts</a> / <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
+  
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
@@ -84,10 +85,15 @@
   I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai LAM</a>, where I conducted research on natural language processing and information retrieval.
   
-  <br><br>I have broad interests in NLP and ML. I used to focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).
-  Currently, I mainly work on large language models, especially on <strong>how to make LLMs more accessible in specific application scenarios</strong>.
+  <br><br>I have broad interests in NLP and ML in general. <!--I used to focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).-->
+  Currently, I mainly work on the following areas:
+  <ul>
+    <li> Multilingual NLP </li>
+    <li> Human-aligned LLMs and Responsible AI</li>
+    <li> Evaluation of foundation models</li>
+  </ul>
 
-  <br><br><span style="color:#f8780f"><i>[VALID]</i></span> Research internship positions (focusing on pure research) in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
+  <span style="color:#f8780f"><i>[VALID]</i></span> Research internship positions (focusing on pure research) in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
 
   <!--
   <h3><a name="research-interests"></a>Research Interests</h3>
@@ -135,6 +141,7 @@
     <li> Journal Reviewer:
       <ul>
         <li> ACM Transactions on Information Systems (TOIS)
+        <li> IEEE Transactions on Knowledge and Data Engineering (TKDE)
         <li> ACM Transactions on the Web (TWEB)
         <li> Neurocomputing
         <li> Transactions on Audio, Speech and Language Processing (TASLP)
@@ -145,7 +152,7 @@
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
     <li> Mar 2023, I gave a talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
-      on Sentiment Analysis (S3A)</a></li>
+      on Sentiment Analysis (S3A)</a>.</li>
     <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications</li>
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
     <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
@@ -155,7 +162,7 @@
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: June 2023</p>
+  <p style="text-align:right;">Last modified date: Aug 2023</p>
 </div>
 
 </body>
