--- a/research.html
+++ b/research.html
@@ -37,7 +37,7 @@
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2022.jpeg" alt="wxzhang-photo">
+  <img class="avatar" src="img/wxzhang-2023-square2.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   <br>Senior Algorithm Engineer (算法专家)
@@ -47,7 +47,7 @@
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
   <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> / <a href="https://isakzhang.notion.site/">Blog Posts</a> / <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
-  <!-- 
+    <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
 
