--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   Currently, I mainly work on the following areas:
   <ul>
     <li> Multilingual NLP </li>
-    <li> Human-aligned LLMs and Responsible AI</li>
+    <li> Trustworthy AI and Human-aligned LLMs</li>
     <li> Evaluation of foundation models</li>
   </ul>
 
@@ -151,7 +151,8 @@
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
-    <li> Mar 2023, I gave a talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
+    <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
+    <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
       on Sentiment Analysis (S3A)</a>.</li>
     <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications</li>
     <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
