--- a/talks/ijcai23-sentiment-tutorial.html
+++ b/talks/ijcai23-sentiment-tutorial.html
@@ -91,6 +91,28 @@
            <span class="author-block"><b style="color:#F2A900; font-weight:normal">&#x25B6 </b>University of Illinois at Chicago</span>
           </div>
           <br>
+
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <span class="link-block">
+                <a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing" target="_blank"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      📄
+                  </span>
+                  <span>Slides Here</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="mailto:isakzhang@gmail.com" target="_blank"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      📧
+                  </span>
+                  <span>Contact: isakzhang AT gmail.com</span>
+                </a>
+              </span>
+            </div>
         </div>
       </div>
     </div>
@@ -105,11 +127,42 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <p>In this tutorial, we aim to provide an in-depth exploration of the field of sentiment analysis and its evolution in the era of enlarged language models. We start with an overview of the traditional SA tasks and methods, followed by a discussion on the latest frontiers of sentiment analysis research. We examine emerging topics in sentiment analysis in recent years, including aspect-based sentiment analysis, conversational sentiment analysis, lifelong sentiment analysis, emotion analysis, and multimodal sentiment analysis, with a special emphasis on how pre-trained language models (PLMs) such as BERT and T5 are being used in each area.</p>
-          <p>Furthermore, we discuss the impact of large language models (LLMs) such as ChatGPT on sentiment analysis tasks and more generally, their ability to understand human emotions and affect. We examine the performance of LLMs on different sentiment analysis tasks and also their effectiveness in tackling a diverse set of tasks requiring a deep understanding of different types of human affect. Finally, we highlight the remaining challenges and future directions of sentiment analysis research in the era of LLMs.</p>
+          <p>In this tutorial, we aim to provide an in-depth exploration of the field of sentiment analysis (SA) and its evolution in the era of large language models (LLMs). We start with an overview of various SA tasks and methods, followed by a discussion on the latest frontiers of sentiment analysis research. Furthermore, we discuss the impact of large language models such as ChatGPT on sentiment analysis tasks and more generally, their ability to understand human emotions and affect. Finally, we highlight the remaining challenges and future directions of sentiment analysis research in the era of LLMs.</p>
         </div>
       </div>
     </div>
+
+
+<section class="section" id="outline">
+  <div class="container is-max-desktop content">
+    <h2 class="title">Outline</h2>
+    <ul>
+      <li>14:00~14:10: Motivation & Introduction - <em>Prof. Bing Liu</em></li>
+      <li>14:10~14:50: From sentiment classification to ABSA - <em>Dr. Wenxuan Zhang</em></li>
+      <li>14:50~15:30: Sentiment analysis is the era of LLMs - <em>Dr. Wenxuan Zhang</em></li>
+      <li>15:30~16:00: Coffee break ☕️</li>
+      <li>16:00~16:30: Beyond sentiment analysis - <em>Prof. Erik Cambria</em></li> 
+      <li>16:30~17:15: Affective computing - <em>Dr. Rui Mao</em></li>
+      <li>17:15~17:30: Conclusions & Future Directions - <em>Dr. Wenxuan Zhang</em></li>
+    </ul>
+  </div>
+</section>
+
+
+<section class="section" id="paper-list">
+  <div class="container is-max-desktop content">
+    <h2 class="title">Suggested Reading List</h2>
+    <ul>
+      <li>Sentiment Analysis - Mining Opinions, Sentiments, and Emotions. Cambridge University Press 2015</li>
+      <li>Beneath the Tip of the Iceberg: Current Challenges and New Directions in Sentiment Analysis Research. IEEE Transactions on Affective Computing</li>
+      <li>A Survey on Aspect-Based Sentiment Analysis: Tasks, Methods, and Challenges. IEEE Transactions on Knowledge and Data Engineering</li>
+      <li>Sentiment Analysis in the Era of Large Language Models: A Reality Check. CoRR abs/2305.15005</li>
+      <li>Is ChatGPT a Good Sentiment Analyzer? A Preliminary Study. CoRR abs/2304.04339</li> 
+      <li>The Biases of Pre-Trained Language Models: An Empirical Study on Prompt-Based Sentiment Analysis and Emotion Detection. IEEE Transactions on Affective Computing.</li>
+      <li>MetaPro Online: A Computational Metaphor Processing Online System. ACL (demo) 2023</li>
+    </ul>
+  </div>
+</section>
 
 
 <section class="section" id="Acknowledgement">
