--- a/talks/ijcai23-sentiment-tutorial.html
+++ b/talks/ijcai23-sentiment-tutorial.html
@@ -98,9 +98,18 @@
                 <a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing" target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
+                      🔗
+                  </span>
+                  <span>Slides (Google Slides)</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="files/llm-sentiment-ijcai2023-tutorial-sharing.pdf" target="_blank"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
                       📄
                   </span>
-                  <span>Slides Here</span>
+                  <span>Slides (PDF)</span>
                 </a>
               </span>
               <span class="link-block">
