--- a/research.html
+++ b/research.html
@@ -83,14 +83,6 @@
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
-        <strong>Wenxuan Zhang</strong>, Sharifah Mahani Aljunied, Chang Gao, Yew Ken Chia, Lidong Bing
-        <br>arXiv:2306.05179 
-        [<a href="https://arxiv.org/abs/2306.05179">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/M3Exam">data&code</a>]
-      </li>
-      <p> </p>
-
-      <li>
         <div id="text" style = "color:#1f57b8">Sentiment Analysis in the Era of Large Language Models: A Reality Check</div>
         <strong>Wenxuan Zhang</strong>*, Yue Deng*, Bing Liu, Sinno Jialin Pan, Lidong Bing
         <br>arXiv:2305.15005 
@@ -101,6 +93,21 @@
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
+      <li>
+        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
+        <strong>Wenxuan Zhang</strong>, Sharifah Mahani Aljunied, Chang Gao, Yew Ken Chia, Lidong Bing
+        <br>NeurIPS 2023 (Datasets and Benchmarks)
+        [<a href="https://arxiv.org/abs/2306.05179">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/M3Exam">data&code</a>]
+      </li>
+      <p> </p>
+      
+      <li>
+        <div id="text" style = "color:#1f57b8">From Clozing to Comprehending: Retrofitting Pre-trained Language Model to Pre-trained Machine Reader</div>
+        Weiwen Xu, Xin Li, <strong>Wenxuan Zhang</strong>, Meng Zhou, Wai Lam, Luo Si, Lidong Bing.
+        <br>NeurIPS 2023 [<a href="hhttps://arxiv.org/abs/2212.04755">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/PMR">data&code</a>]
+      </li>
+      <p> </p>
+
       <li>
         <div id="text" style = "color:#1f57b8">Bidirectional Generative Framework for Cross-domain Aspect-based Sentiment Analysis</div>
         Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing.
