--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
   <br><br>I have broad interests in NLP and ML in general. <!--I used to focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).-->
   Currently, I mainly work on the following areas:
   <ul>
-    <li> Multilingual NLP </li>
-    <li> Trustworthy AI and Human-aligned LLMs</li>
+    <li> Multilingual LLMs </li>
+    <li> Trustworthy NLP and Human-aligned LLMs</li>
     <li> Evaluation of foundation models</li>
   </ul>
 
@@ -107,6 +107,7 @@
 
   <h3 id="news">News</h3>
     <ul>
+      <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">Paper</a> and <a href="https://github.com/DAMO-NLP-SG/M3Exam">data</a> are all public available now.</li>
       <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li>
       <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li>
@@ -151,6 +152,7 @@
 
   <h3><a name="teaching"></a>Teaching & Talk</h3>
   <ul>
+    <li> Sep 2023: invited talk on M3Exam at multilingual & multimodal LLMs session of <a href="http://mlnlp.world/mlnlp2023/">MLNLP 2023</a></li>
     <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
     <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
       on Sentiment Analysis (S3A)</a>.</li>
