--- a/index.html
+++ b/index.html
@@ -82,18 +82,17 @@
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me</h3>
-  I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree at <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
+  I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai LAM</a>, where I conducted research on natural language processing and information retrieval.
   
   <br><br>I have broad interests in NLP and ML in general. <!--I used to focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).-->
-  Currently, I mainly work on the following areas:
+  Currently, I mainly work on:
   <ul>
-    <li> Multilingual LLMs </li>
-    <li> Trustworthy NLP and Human-aligned LLMs</li>
-    <li> Evaluation of foundation models</li>
+    <li> <strong>Inclusive NLP</strong>: multilingual and multicultural NLP, cross-lingual transfer, low-resource languages</li>
+    <li> <strong>Trustworthy NLP</strong>: LLM safety, evaluation of foundation models, human-aligned LLMs</li>
   </ul>
 
-  <span style="color:#f8780f"><i>[VALID]</i></span> Research internship positions (focusing on pure research) in our group are available (base in Singapore or Hangzhou), feel free to drop me your CV if interested.
+  <span style="color:#f8780f"><i>[VALID]</i></span> Research internship positions (focusing on pure research) are available based in Singapore or China (Hangzhou). Feel free to send me your CV if you want to work together!
 
   <!--
   <h3><a name="research-interests"></a>Research Interests</h3>
