--- a/research.html
+++ b/research.html
@@ -79,13 +79,29 @@
     </script>
   </div>
   <!--end of Navigation bar-->
-  
+
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
+        <div id="text" style = "color:#1f57b8">Multilingual Jailbreak Challenges in Large Language Models</div>
+        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
+        <br>arXiv:2310.06474
+        [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
+      </li>
+      <p> </p>
+  
+      <li>
+        <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
+        Chang Gao, <strong>Wenxuan Zhang</strong>, Guizhen Chen, Wai Lam
+        <br>arXiv:2310.02953
+        [<a href="https://arxiv.org/abs/2310.02953">paper</a>] [<a href="https://github.com/gao-xiao-bai/JsonTuning">data&code</a>]
+      </li>
+      <p> </p>
+
+      <li>
         <div id="text" style = "color:#1f57b8">Sentiment Analysis in the Era of Large Language Models: A Reality Check</div>
         <strong>Wenxuan Zhang</strong>*, Yue Deng*, Bing Liu, Sinno Jialin Pan, Lidong Bing
-        <br>arXiv:2305.15005 
+        <br>arXiv:2305.15005
         [<a href="https://arxiv.org/abs/2305.15005">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/LLM-Sentiment">data&code</a>]
       </li>
       <p> </p>
@@ -254,7 +270,7 @@
 </div>
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: June 2023</p>
+  <p style="text-align:right;">Last modified date: Oct 2023</p>
 </div>
 
 </body>
