--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- The design of this website is based on https://nlp.stanford.edu/~johnhew/ and modified by Wenxuan Zhang.
-     PLS ask for permission & add a link to this website before you directly copy and apply to yours -->
+<!-- 
+The design of this website is based on https://nlp.stanford.edu/~johnhew/ and modified by Wenxuan Zhang (isakzhang AT gmail).
+PLS ask for permission & add a link to this website before you directly copy and apply to yours 
+-->
 
 <head>
   <meta charset="UTF-8">
@@ -46,7 +48,7 @@
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
   
-  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> / <a href="https://isakzhang.notion.site/">Blog Posts</a> / <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
+  <br>More about me: <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://isakzhang.notion.site/">Blog Posts</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a>
   
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
@@ -83,29 +85,24 @@
   
   <h3><a name="bio"></a>About me</h3>
   I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
-  under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai LAM</a>, where I conducted research on natural language processing and information retrieval.
-  
-  <br><br>I have broad interests in NLP and ML in general. <!--I used to focus on low-resource NLP (PLM adaptation, cross-lingual/domain transfer), sentiment analysis, and conversational AI (question answering and dialog systems).-->
-  Currently, I mainly work on:
+  under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
+
+  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures, while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
+
+  <br><br>Some recent research projects are:
   <ul>
-    <li> <strong>Inclusive NLP</strong>: multilingual and multicultural NLP, cross-lingual transfer, low-resource languages</li>
-    <li> <strong>Trustworthy NLP</strong>: LLM safety, evaluation of foundation models, human-aligned LLMs</li>
+    <li> Understanding and enhancing multilingual ability of (mostly English-centric) LLMs </li>
+    <li> LLM safety: ensuring the model's safety in both the development and deployment stages </li>
+    <li> Evaluation of foundation models: how to comprehensively AND fairly evaluate an LLM </li>
+    <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li>
   </ul>
 
-  <span style="color:#f8780f"><i>[VALID]</i></span> Research internship positions (focusing on pure research) are available based in Singapore or China (Hangzhou). Feel free to send me your CV if you want to work together!
+  <span style="color:royalblue;"><i>Feel free to drop me an email if you want to collaborate. Research intern positions are also available based in Singapore or China (Hangzhou).</i></span>
 
-  <!--
-  <h3><a name="research-interests"></a>Research Interests</h3>
-    I have broad interests in natural language processing and machine learning, especially applying deep learning for various NLP tasks. In particular, I focus on:
-    <ul>
-      <li>Conversational AI: Question Answering and Dialogue Systems </li>
-      <li>Sentiment Analysis (especially fine-grained aspect-level sentiment analysis)</li>
-    </ul>
-    I'm also interested in <span style="color:#B08519"><a href="https://isakzhang.notion.site/What-is-Transfer-Learning-666035af797a4949b032bbeb0ea46df6">Transfer Learning</a></span> (≈ PLM adaptation for various tasks nowadays).  My research works involve many perspectives of TL: utilization of external supervision signals (WWW20, AACL20), adaptation of pre-trained language models (ACL21, EMNLP21), and cross-lingual transfer (EMNLP21) 
-  -->
 
   <h3 id="news">News</h3>
     <ul>
+      <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">Paper</a> and <a href="https://github.com/DAMO-NLP-SG/M3Exam">data</a> are all public available now.</li>
       <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li>
@@ -164,7 +161,7 @@
 
 
 <div id='footer'>
-  <p style="text-align:right;">Last modified date: Aug 2023</p>
+  <p style="text-align:right;">Last modified date: Nov 2023</p>
 </div>
 
 </body>
