--- a/research.html
+++ b/research.html
@@ -83,7 +83,7 @@
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8">Multilingual Jailbreak Challenges in Large Language Models</div>
+        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> Multilingual Jailbreak Challenges in Large Language Models</div>
         Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
         <br>arXiv:2310.06474
         [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
@@ -110,7 +110,7 @@
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
+        <div id="text" style = "color:#1f57b8">M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
         <strong>Wenxuan Zhang</strong>, Sharifah Mahani Aljunied, Chang Gao, Yew Ken Chia, Lidong Bing
         <br>NeurIPS 2023 (Datasets and Benchmarks)
         [<a href="https://arxiv.org/abs/2306.05179">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/M3Exam">data&code</a>]
@@ -125,9 +125,9 @@
       <p> </p>
 
       <li>
-        <div id="text" style = "color:#1f57b8">Bidirectional Generative Framework for Cross-domain Aspect-based Sentiment Analysis</div>
+        <div id="text" style = "color:#1f57b8">SOUL: Towards Sentiment and Opinion Understanding of Language</div>
         Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing.
-        <br>ACL 2023 [<a href="https://arxiv.org/abs/2305.09509/">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/BGCA">data&code</a>]
+        <br>EMNLP 2023 [<a href="https://arxiv.org/abs/2310.17924">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SOUL">data&code</a>]
       </li>
       <p> </p>
 
@@ -142,6 +142,13 @@
         <div id="text" style = "color:#1f57b8">Product Question Answering in E-Commerce: A Survey</div>
         Yang Deng, <strong>Wenxuan Zhang</strong>, Qian Yu, Wai Lam.
         <br>ACL 2023 [<a href="">paper</a>] [<a href="">data&code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">Bidirectional Generative Framework for Cross-domain Aspect-based Sentiment Analysis</div>
+        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing.
+        <br>ACL 2023 [<a href="https://arxiv.org/abs/2305.09509/">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/BGCA">data&code</a>]
       </li>
       <p> </p>
 
