--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@ PLS ask for permission & add a link to this website before you directly copy and
   <img class="avatar" src="img/wxzhang-2023-square2.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
-  <br>Senior Algorithm Engineer (算法专家)
+  Senior Algorithm Engineer (算法专家)
   <br>Language Technology Lab
+  <br>Singapore R&D Center
   <br>DAMO Academy, Alibaba Group
   <br><br>
   Contact: <code class="language-plaintext highlighter-rouge">isakzhang [at] gmail.com</code>
