--- a/research.html
+++ b/research.html
@@ -84,7 +84,15 @@
   <h3><a name="pub"></a>Recent Preprints</h3> 
     <ul>
       <li>
-        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> Multilingual Jailbreak Challenges in Large Language Models</div>
+        <div id="text" style = "color:#1f57b8"><span style="color:#c30"><i>[NEW]</i></span> SeaLLMs -- Large Language Models for Southeast Asia </div>
+        Xuan-Phi Nguyen*, <strong>Wenxuan Zhang*</strong>, Xin Li*, Mahani Aljunied*, Qingyu Tan, Liying Cheng, Guanzheng Chen, Yue Deng, Sen Yang, Chaoqun Liu, Hang Zhang, Lidong Bing
+        <br>arXiv:2312.00738
+        [<a href="https://arxiv.org/abs/2312.00738">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SeaLLMs">code</a>] [<a href="https://huggingface.co/SeaLLMs/SeaLLM-Chat-13b">demo</a>] 
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8"> Multilingual Jailbreak Challenges in Large Language Models</div>
         Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
         <br>arXiv:2310.06474
         [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
