--- a/research.html
+++ b/research.html
@@ -90,14 +90,6 @@
         [<a href="https://arxiv.org/abs/2312.00738">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/SeaLLMs">code</a>] [<a href="https://huggingface.co/SeaLLMs/SeaLLM-Chat-13b">demo</a>] 
       </li>
       <p> </p>
-
-      <li>
-        <div id="text" style = "color:#1f57b8"> Multilingual Jailbreak Challenges in Large Language Models</div>
-        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
-        <br>arXiv:2310.06474
-        [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
-      </li>
-      <p> </p>
   
       <li>
         <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
@@ -118,6 +110,22 @@
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
   <ul>
+      <li>
+        <div id="text" style = "color:#1f57b8"> Multilingual Jailbreak Challenges in Large Language Models</div>
+        Yue Deng, <strong>Wenxuan Zhang</strong>, Sinno Jialin Pan, Lidong Bing
+        <br>ICLR 2024
+        [<a href="https://arxiv.org/abs/2310.06474">paper</a>] [<a href="https://github.com/DAMO-NLP-SG/multilingual-safety-for-LLMs">data&code</a>]
+      </li>
+      <p> </p>
+
+      <li>
+        <div id="text" style = "color:#1f57b8">Plug-and-Play Policy Planner for Large Language Model Powered Dialogue Agents</div>
+        Yang Deng, <strong>Wenxuan Zhang</strong>, Wai Lam, See-Kiong Ng, Tat-Seng Chua
+        <br>ICLR 2024 
+        [<a href="https://arxiv.org/abs/2311.00262">paper</a>] [<a href="">data&code</a>]
+      </li>
+      <p> </p>
+
       <li>
         <div id="text" style = "color:#1f57b8">M3Exam: A Multilingual, Multimodal, Multilevel Benchmark for Examining Large Language Models</div>
         <strong>Wenxuan Zhang</strong>, Sharifah Mahani Aljunied, Chang Gao, Yew Ken Chia, Lidong Bing
