--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   I am currently a research scientist at Language Technology Lab, <a href="https://damo.alibaba.com/?lang=en">Alibaba DAMO Academy</a>. Prior to that, I obtained my Ph.D. degree from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, 
   under the supervision of <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.
 
-  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures, while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
+  <br><br>My research aims to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (i.e., multilingual and multicultural NLP), while also <strong>trustworthy</strong> through techniques that improve safety and robustness of language models. I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.
 
   <br><br>Some recent research projects are:
   <ul>
@@ -103,7 +103,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <h3 id="news">News</h3>
     <ul>
-      <li><span style="color:#B08519">[Dec 2023]</span> I will attend EMNLP in person, drop me an email if you want to have a coffee chat ☕️ </li>
+      <li><span style="color:#B08519">[Jan 2024]</span> Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>
       <li><span style="color:#B08519">[Nov 2023]</span> We release the first LLM named <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> dedicated to languages in Southeast Asia region.</li>
       <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
       <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">Paper</a> and <a href="https://github.com/DAMO-NLP-SG/M3Exam">data</a> are all public available now.</li>
